force-app/main/default/objects/OTP_Session__c/OTP_Session__c.object-meta.xml
<CustomObject>
    <description>Durable, per-tenant OTP verification session used by PHP_OTPService. Replaces an in-memory static map so the code generated by the GENERATE action is still readable by the VALIDATE action in a later transaction.</description>
    <label>OTP Session</label>
    <nameField>
        <displayFormat>OTP-{0000}</displayFormat>
        <label>OTP Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OTP Sessions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>