force-app/main/default/objects/OTP_Session__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OTP Sessions</relationshipLabel>
    <relationshipName>OTP_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>