force-app/main/default/objects/OTP_Session__c/fields/Failed_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Failed_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Failed Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>