force-app/main/default/objects/OTP_Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Id__c</columns>
    <columns>Code__c</columns>
    <columns>Expires_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>